*
* 1.1.10
*

- Changed default timeout for service checking subagent
- Java console:
	- Added missing DCI option "process all thresholds"
	- SNMP trap monitor
- New format specifiers in nxalarm: %x and %X


*
* 1.1.9
*

- Fixed server crash during startup
- Fixed failed SQL queries if MS SQL used as backend
- FIxed "Resource not available" error when trying to view VLANs on a switch
- Bugfix: data collection configuration not available for cluster objects
- Bugfix: cannot remove package from list if file does not exist
- Bugfix: temporary file not deleted after external parameter execution
- Bugfix: cannot change node's "force encryption" flag from Java console
- Bugfix: cannot execute local commands with spaces in path
- Template can be moved between template groups
- Added "refresh" function to alarm browser in Java console


*
* 1.1.8
*

- New node properties: "disable topology polling" and
  "disable discovery polling"
- Changes and improvements in Java console:
	- Implemented embedded web page element type in dashboards
	- Implemented alarm viewer element type in dashboards
	- Dashboard cloning
	- Syslog monitor
	- Event monitor
	- Implemented status calculation/propagation object property page
	- Execution of "local command" type tools improved
	- Dial charts improved
	- Fixed object selection bug in network maps
	- Implemented agent package management and deployment
- Added common driver for Cisco Catalyst switches with CISCO-STACK-MIB support
- Implemented event identification by name in sendEvent API
- RADIUS authentication now supports passwords up to 128 characters long 
  (was up to 16)
- Fixed server crash on Windows 2008 R2
- New MIBs added: CISCO-STACK-MIB, FDDI-SMT73-MIB


*
* 1.1.7
*

- New internal parameter: Net.IP.NextHop
- Implemented IP route visualization in management console
- New MIBs added: JUNIPER-IVE-MIB
- New NXSL functions: GetInterfaceObject
- Many small improvements in management console
- Fixed issues: #335, #336, #337


*
* 1.1.6