@@ -775,6 +775,7 @@ enum
 #define ACTION_SEND_EMAIL     2
 #define ACTION_SEND_SMS       3
 #define ACTION_FORWARD_EVENT  4
+#define ACTION_NXSL_SCRIPT    5
 
 
 //
