@@ -32,6 +32,7 @@ public class ServerAction
 	public static final int SEND_EMAIL = 2;
 	public static final int SEND_SMS = 3;
 	public static final int FORWARD_EVENT = 4;
+	public static final int EXEC_NXSL_SCRIPT = 5;
 	
 	private long id;
 	private int type;
