@@ -2,6 +2,7 @@
 * 1.1.10
 *
 
+- New action type: execute NXSL script
 - Changed default timeout for service checking subagent
 - Java console:
 	- Added missing DCI option "process all thresholds"
